# rust-chess

./: .gitignore  Cargo.toml  README.md  build.sh  compare.py  develop.sh  flake.nix  publish.sh  pyproject.toml  requirements.txt  rust_chess.pyi  shell.nix  test.py  testing.py
.cargo/: ci-config.toml  config.toml
.github/workflows/: CI.yml
benches/: default.rs
scripts/: build_dev.sh  develop.sh  develop_dev.sh  publish.sh  stub_gen.sh  test.sh
src/: lib.rs
src/types/: _board_tracking.rs  bitboard.rs  board.rs  board_batch.rs  board_tracking.rs  color.rs  mod.rs  move.rs  piece.rs  square.rs  zobrist.rs
tests/: batchmark.py  benchmark.py  compare.py  perft.py  test_chess_crate_gen_bug.rs  test_doctests.py
