[package]
name = "rust-chess"
version = "0.3.4"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rust_chess" # (Rust doesn't allow dashes in modules)
crate-type = ["cdylib", "rlib"] # For PyO3 stub gen

[dependencies]
chess = "3.2.0"
pyo3 = "0.28.3"
pyo3-stub-gen = "0.22.1" # Enable auto generating pyo3 stub files

[lints.clippy]
correctness = "warn"
suspicious = "warn"
complexity = "warn"
perf = "warn"
style = "warn"
pedantic = "warn"
nursery = "warn"

[profile.dev] # Faster build time
lto = false
panic = "unwind"
strip = "none"
incremental = true # Store previous build (also sets codegen-units to 256)
debug = 0

[profile.release] # Performance optimized
lto = true
codegen-units = 1
opt-level = 3
panic = "abort"
strip = true
