[package]
name = "rust-chess"
version = "0.4.3"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rust_chess" # (Rust doesn't allow dashes in modules)
crate-type = ["cdylib", "rlib"] # For PyO3 stub gen

[dependencies]
chess = "3.2.0"
pyo3 = "0.28.3"
pyo3-stub-gen = "0.22.2" # Enable auto generating pyo3 stub files
terminal_size = "0.4.4" # Minimal binary to detect terminal size for dynamic tiled board display

# Doesn't work on aarch64 linux in the github action
[target.'cfg(not(all(target_arch = "aarch64", target_os = "linux")))'.dependencies]
mimalloc = "0.1.50" # Faster allocater than the default system allocator

[dev-dependencies]
criterion = "0.8.2" # Benchmarking library for performance testing

[[bench]]
name = "default"
harness = false

[lints.clippy]
correctness = "warn"
suspicious = "warn"
complexity = "warn"
perf = "warn"
style = "warn"
pedantic = "warn"
nursery = "warn"

[profile.bench]
inherits = "release"

[profile.dev] # Faster build time
lto = "off"
debug = 0

[profile.release] # Performance optimized
strip = true
lto = true
codegen-units = 1
panic = "abort"
