[build-system]
requires = ["maturin>=1.8,<2.0"]
build-backend = "maturin"

[project]
name = "rust_chess"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python",
]
dynamic = ["version"]

[tool.maturin]
profile = "release" # Use release profile for building
strip = true # Remove debug symbols
features = ["pyo3/extension-module"]
rustc-args = [
    "-C",
    "target-cpu=native",           # Gain access to CPU popcnt and ctzl (recommended by chess crate)
    "--cfg",
    "pyo3_disable_reference_pool", # Disables the global reference pool: reduces overhead crossing Py-Rust boundary when creating objects in Python
]
